methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:12: error: type mismatch;
 found   : Boolean(true)
 required: Int
  return true
         ^